--- a/public/skin/frontend/rwd/default/css/styles.css
+++ b/public/skin/frontend/rwd/default/css/styles.css
@@ -5176,6 +5176,7 @@ p.product-name a:hover {
 #product-attribute-specs-table {
   max-width: 50em;
   border: 1px solid silver;
+  border-collapse: collapse;
 }
 #product-attribute-specs-table th {
   border-right: 1px solid silver;
