RWD: removed imagesloaded.js completely and rewrote funcionality with modern js, added lazy load to image gallery in product view

--- a/app/design/frontend/rwd/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/view/media.phtml
@@ -33,7 +33,7 @@
         <?php $i=0; foreach ($this->getGalleryImages() as $_image): ?>
             <?php if ($this->isGalleryImageVisible($_image)): ?>
             <img id="image-<?= $i ?>"
-                 class="gallery-image"
+                 class="gallery-image" loading="lazy"
                  src="<?= $this->getGalleryImageUrl($_image) ?>"
                  data-zoom-image="<?=  $this->getGalleryImageUrl($_image) ?>" />
             <?php endif ?>
