RWD: removed modernizr.js

--- a/app/design/frontend/rwd/default/template/paypal/express/review/address.phtml
+++ b/app/design/frontend/rwd/default/template/paypal/express/review/address.phtml
@@ -148,7 +148,7 @@
         }
 
         if (this._copyElement.checked) {
-            if (this.copyShippingToBilling_allowScrollTo && Modernizr.mq && Modernizr.mq("only screen and (max-width: 767px)")) {
+            if (this.copyShippingToBilling_allowScrollTo && window.matchMedia("only screen and (max-width: 767px)").matches) {
                 $('shipping-address').scrollTo();
             }
         } else {
