--- a/public/skin/frontend/rwd/default/css/styles.css
+++ b/public/skin/frontend/rwd/default/css/styles.css
@@ -7090,7 +7090,7 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
   right: 0;
   top: 0;
   bottom: 0;
-  background: url(../images/bg_x.png) center no-repeat transparent;
+  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='%23aaa' transform='rotate(315)' stroke='%23000000' stroke-width='0'%3E%3Cpath d='M23 13H1v-2h22z'/%3E%3Cpath fill='none' d='M0 0h24v24H0z'/%3E%3C/svg%3E") center no-repeat transparent;
   z-index: 10;
 }
 .swatch-link.has-image .swatch-label {
