--- a/app/design/frontend/base/default/template/paygate/form/cc.phtml
+++ b/app/design/frontend/base/default/template/paygate/form/cc.phtml
@@ -70,7 +70,7 @@
         //]]>
         </script>
         <span id="cancel-please-wait" class="please-wait" style="display:none">
-            <img src="<?= $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="" class="v-middle" /> <?= $this->__('Processing...') ?>
+            <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="" class="v-middle" /> <?= $this->__('Processing...') ?>
         </span>
     <?php endif ?>
 </div>
