--- a/app/design/frontend/rwd/default/template/checkout/multishipping/overview.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/multishipping/overview.phtml
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <span class="please-wait" id="review-please-wait" style="display:none;">
-                        <img src="<?= $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?= $this->quoteEscape($this->__('Submitting order information...')) ?>" title="<?= $this->quoteEscape($this->__('Submitting order information...')) ?>" class="v-middle" /> <?= $this->__('Submitting order information...') ?>
+                        <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= $this->quoteEscape($this->__('Submitting order information...')) ?>" title="<?= $this->quoteEscape($this->__('Submitting order information...')) ?>" class="v-middle" /> <?= $this->__('Submitting order information...') ?>
                     </span>
                 </div>
             </div>
