--- a/app/design/frontend/base/default/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/review/info.phtml
@@ -54,7 +54,7 @@
         <p class="f-left"><?= $this->__('Forgot an Item?') ?> <a href="<?= $this->getUrl('checkout/cart') ?>"><?= $this->__('Edit Your Cart') ?></a></p>
         <?= $this->getChildHtml('button') ?>
         <span class="please-wait" id="review-please-wait" style="display:none;">
-            <img src="<?= $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" class="v-middle" /> <?= $this->__('Submitting order information...') ?>
+            <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" class="v-middle" /> <?= $this->__('Submitting order information...') ?>
         </span>
     </div>
     <script type="text/javascript">
