--- a/app/design/frontend/base/default/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/shipping.phtml
@@ -129,7 +129,7 @@
         <p class="back-link"><a href="#" onclick="checkout.back(); return false;"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
         <button type="button" class="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Continue')) ?>" onclick="shipping.save()"><?= $this->__('Continue') ?></button>
         <span id="shipping-please-wait" class="please-wait" style="display:none;">
-            <img src="<?= $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" /> <?= $this->__('Loading next step...') ?>
+            <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" /> <?= $this->__('Loading next step...') ?>
         </span>
     </div>
     <?= $this->getBlockHtml('formkey') ?>
