--- a/app/design/frontend/base/default/template/paypal/express/review.phtml
+++ b/app/design/frontend/base/default/template/paypal/express/review.phtml
@@ -98,7 +98,7 @@
         <button type="button" id="review_button" value="<?= Mage::helper('core')->quoteEscape($this->__('Place Order')) ?>" class="button btn-checkout"><?= $this->__('Place Order') ?></button>
         <button type="button" id="review_submit" value="<?= Mage::helper('core')->quoteEscape($this->__('Place Order')) ?>" class="button btn-checkout"><?= $this->__('Place Order') ?></button>
         <span class="please-wait" id="review-please-wait" style="display:none;">
-            <img src="<?= $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" class="v-middle" /> <?= $this->__('Submitting order information...') ?>
+            <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Submitting order information...')) ?>" class="v-middle" /> <?= $this->__('Submitting order information...') ?>
         </span>
     </div>
 </form>
