--- a/app/design/frontend/rwd/default/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/onepage/payment.phtml
@@ -37,7 +37,7 @@
     <p class="back-link"><a href="#" onclick="checkout.back(); return false;"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
     <button type="button" class="button" onclick="payment.save()"><span><span><?= $this->__('Continue') ?></span></span></button>
     <span class="please-wait" id="payment-please-wait" style="display:none;">
-        <img src="<?= $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" /> <?= $this->__('Loading next step...') ?>
+        <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" /> <?= $this->__('Loading next step...') ?>
     </span>
 </div>
 <script type="text/javascript">
