--- a/app/design/frontend/rwd/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/rwd/default/template/persistent/customer/form/register.phtml
@@ -54,6 +54,14 @@
                 <li><?= $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></li>
             <?php endif ?>
 
+            <?php foreach ($this->extraFields() as $_code => $_attribute): ?>
+                <?php $_block = 'eav/widget_'.$_attribute->getFrontendInput() ?>
+                <?php $_element = $this->getLayout()->createBlock($_block)->setData('attribute', $_attribute) ?>
+                <?php if ($_element->isEnabled()): ?>
+                    <li><?php echo $_element->setObject($this->getFormData())->toHtml() ?></li>
+                <?php endif ?>
+            <?php endforeach ?>
+
             <?php if($this->getShowAddressFields()): ?>
                 <li class="hidden">
                     <input type="hidden" name="create_address" value="1" />
