--- a/app/design/adminhtml/default/default/template/system/convert/profile/process.phtml
+++ b/app/design/adminhtml/default/default/template/system/convert/profile/process.phtml
@@ -49,7 +49,7 @@
             <li id="liBeforeFinish" style="background-color:#FFD; display:none;">
                 <img src="<?= $this->getSkinUrl('images/fam_bullet_error.gif') ?>" class="v-middle" style="margin-right:5px"/>
                 <?= $this->__("Please wait while the indexes are being refreshed.") ?>
-                <img id="before-finish-wait-img" src="<?= $this->getSkinUrl('images/rule-ajax-loader.gif') ?>" class="v-middle" style="margin-right:5px"/>
+                <img id="before-finish-wait-img" src="<?= $this->getSkinUrl('images/loading.svg') ?>" class="v-middle" style="margin-right:5px"/>
             </li>
         <?php endif ?>
             <li id="liFinished" style="display:none;">
