--- a/app/design/adminhtml/default/default/template/newsletter/preview/iframeswitcher.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/preview/iframeswitcher.phtml
@@ -37,7 +37,7 @@
 <div id="loading-mask" style="display:none">
     <div class="backdrop"></div>
     <p class="loader" id="loading_mask_loader">
-        <img src="<?= $this->getSkinUrl('images/ajax-loader-tr.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Loading...')) ?>"/><br/><?= Mage::helper('adminhtml')->__('Please wait...') ?>
+        <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Loading...')) ?>"/><br/><?= Mage::helper('adminhtml')->__('Please wait...') ?>
     </p>
 </div>
 
