--- a/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
@@ -9,11 +9,7 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
-/**
- * @var Mage_Checkout_Block_Onepage_Billing $this
- */
+/** @var Mage_Checkout_Block_Onepage_Billing $this */
 ?>
 <form id="co-billing-form" action="">
 <fieldset>
@@ -139,12 +135,9 @@
                 </li>
             <?php endif ?>
 
-        <?php $_taxvat = $this->getLayout()->createBlock('customer/widget_taxvat') ?>
-        <?php if ($_taxvat->isEnabled()): ?>
-                <li>
-                    <?= $_taxvat->setTaxvat($this->getQuote()->getCustomerTaxvat())->setFieldIdFormat('billing:%s')->setFieldNameFormat('billing[%s]')->toHtml() ?>
-                </li>
-        <?php endif ?>
+            <?php if ($this->isTaxvatEnabled()):?>
+                <li><?= $this->getTaxvatHtml() ?></li>
+            <?php endif ?>
 
                 <li class="fields" id="register-customer-password">
                     <div class="field">
@@ -169,6 +162,7 @@
                         </div>
                     </div>
                 </li>
+                <?= $this->getChildHtml('persistent.remember.me') ?>
                 <?php endif ?>
                 <?php if ($this->isCustomerLoggedIn() && $this->customerHasAddresses()):?>
                     <li class="control">
@@ -179,6 +173,7 @@
                 <?php endif ?>
                 <?= $this->getChildHtml('form.additional.info') ?>
             </ul>
+            <?= $this->getChildHtml('persistent.remember.me.tooltip') ?>
         </fieldset>
     </li>
     <?php /* Extensions placeholder */ ?>
@@ -209,9 +204,21 @@
     var billing = new Billing('co-billing-form', '<?= $this->getUrl('checkout/onepage/getAddress') ?>address/', '<?= $this->getUrl('checkout/onepage/saveBilling') ?>');
     var billingForm = new VarienForm('co-billing-form');
 
-    //billingForm.setElementsRelation('billing:country_id', 'billing:region', '<?= $this->getUrl('directory/json/childRegion') ?>', '<?= $this->__('Select State/Province...') ?>');
+    //billingForm.setElementsRelation('billing:country_id', 'billing:region', '<?= $this->getUrl('directory/json/childRegion') ?>', '<?= Mage::helper('core')->jsQuoteEscape($this->__('Select State/Province...')) ?>');
     $('billing-address-select') && billing.newAddress(!$('billing-address-select').value);
 
     var billingRegionUpdater = new RegionUpdater('billing:country_id', 'billing:region', 'billing:region_id', <?= Mage::helper('directory')->getRegionJsonByStore() ?>, undefined, 'billing:postcode');
+    if ($('onepage-guest-register-button')) {
+        Event.observe($('onepage-guest-register-button'), 'click', function(event) {
+            var billingRememberMe = $('co-billing-form').select('#remember-me-box');
+            if (billingRememberMe.length > 0) {
+                if ($('login:guest') && $('login:guest').checked) {
+                    billingRememberMe[0].hide();
+                } else if ($('login:register') && ($('login:register').checked || $('login:register').type == 'hidden')) {
+                    billingRememberMe[0].show();
+                }
+            }
+        });
+    }
 //]]>
 </script>
