--- a/app/design/frontend/base/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/login.phtml
@@ -10,13 +10,21 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+<?php
+/**
+ * Customer onepage checkout login form template
+ *
+ * @var $this Mage_Checkout_Block_Onepage_Login
+ */
+?>
+<?php $isAllowedGuestCheckout = $this->getQuote()->isAllowedGuestCheckout() ?>
 <?php /* Extensions placeholder */ ?>
 <?= $this->getChildHtml('checkout.onepage.login.extra') ?>
 <div class="col2-set">
     <?= $this->getChildHtml('login_before') ?>
     <div class="col-1">
-        <h3><?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?><?= $this->__('Checkout as a Guest or Register') ?><?php else: ?><?= $this->__('Register to Create an Account') ?><?php endif ?></h3>
-        <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
+        <h3><?php if($isAllowedGuestCheckout): ?><?= $this->__('Checkout as a Guest or Register') ?><?php else: ?><?= $this->__('Register to Create an Account') ?><?php endif ?></h3>
+        <?php if($isAllowedGuestCheckout): ?>
             <p><?= $this->__('Register with us for future convenience:') ?></p>
         <?php else: ?>
             <p><strong><?= $this->__('Register and save time!') ?></strong><br />
@@ -26,15 +34,15 @@
                 <li><?= $this->__('Easy access to your order history and status') ?></li>
             </ul>
         <?php endif ?>
-        <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
+        <?php if($isAllowedGuestCheckout): ?>
             <ul class="form-list">
-                <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
+                <?php if($isAllowedGuestCheckout): ?>
                 <li class="control">
                     <input type="radio" name="checkout_method" id="login:guest" value="guest"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_GUEST): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:guest"><?= $this->__('Checkout as Guest') ?></label>
                 </li>
                 <?php endif ?>
                 <li class="control">
-                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER || !$this->getQuote()->isAllowedGuestCheckout()): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:register"><?= $this->__('Register') ?></label>
+                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER || !$isAllowedGuestCheckout): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:register"><?= $this->__('Register') ?></label>
                 </li>
             </ul>
             <h4><?= $this->__('Register and save time!') ?></h4>
@@ -69,7 +77,9 @@
                     </div>
                 </li>
                 <?= $this->getChildHtml('form.additional.info') ?>
+                <?= $this->getChildHtml('persistent.remember.me') ?>
             </ul>
+            <input name="context" type="hidden" value="checkout" />
         </fieldset>
         </form>
     </div>
@@ -78,7 +88,17 @@
     <div class="col-1">
         <div class="buttons-set">
             <p class="required">&nbsp;</p>
-            <button type="button" class="button" onclick="checkout.setMethod();"><?= ($this->getQuote()->isAllowedGuestCheckout() ? $this->__('Continue') : $this->__('Register')) ?></button>
+            <?php if ($isAllowedGuestCheckout): ?>
+                <button id="onepage-guest-register-button" type="button" class="button" onclick="checkout.setMethod();"><?= $this->__('Continue') ?></button>
+            <?php elseif ($this->helper('checkout')->isCustomerMustBeLogged()): ?>
+                <button id="onepage-guest-register-button" type="button" class="button" onclick="window.location='<?= $this->helper('checkout/url')->getRegistrationUrl();?>'"><?= $this->__('Register') ?></button>
+            <?php elseif ($this->helper('checkout')->isPersistentEnabled()): ?>
+                <form action="<?= $this->getUrl('persistent/index/saveMethod') ?>">
+                    <button id="onepage-guest-register-button" type="submit" class="button"><?= $this->__('Register') ?></button>
+                </form>
+            <?php else: ?>
+                <button id="onepage-guest-register-button" type="button" class="button" onclick="checkout.setMethod();"><?= $this->__('Register') ?></button>
+            <?php endif ?>
         </div>
     </div>
     <div class="col-2">
@@ -108,3 +128,18 @@
     }
 //]]>
 </script>
+<?php
+    $registerParam = $this->getRequest()->getParam('register');
+    if ($registerParam || $registerParam === ''):
+?>
+    <script type="text/javascript">
+    //<![CDATA[
+        document.observe("dom:loaded", function() {
+            if($('login:register')) {
+                $('login:register').checked = true;
+                checkout.setMethod();
+            }
+        })
+    //]]>
+    </script>
+<?php endif ?>
