--- a/app/design/frontend/base/default/template/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/customer/form/register.phtml
@@ -167,13 +167,18 @@
                     </div>
                 </li>
                 <?= $this->getChildHtml('form.additional.info') ?>
+                <?= $this->getChildHtml('persistent.remember.me') ?>
             </ul>
+            <?= $this->getChildHtml('persistent.remember.me.tooltip') ?>
         </div>
         <div class="buttons-set">
             <p class="required"><?= $this->__('* Required Fields') ?></p>
             <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>" class="back-link"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
             <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
         </div>
+        <?php if (Mage::helper('checkout')->isContextCheckout()): ?>
+            <input name="context" type="hidden" value="checkout" />
+        <?php endif ?>
     </form>
     <script type="text/javascript">
     //<![CDATA[
