--- a/app/design/frontend/base/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/login.phtml
@@ -17,75 +17,38 @@
  * @var $this Mage_Checkout_Block_Onepage_Login
  */
 ?>
+<?php $isRegistrationAllowed = $this->helper('customer')->isRegistrationAllowed() ?>
 <?php $isAllowedGuestCheckout = $this->getQuote()->isAllowedGuestCheckout() ?>
 <?php /* Extensions placeholder */ ?>
+<?= $this->getChildHtml('login_before') ?>
 <?= $this->getChildHtml('checkout.onepage.login.extra') ?>
-<div class="col2-set">
-    <?= $this->getChildHtml('login_before') ?>
+<div class="col2-set<?php if (!$isRegistrationAllowed && !$isAllowedGuestCheckout) echo ' login-only' ?>">
     <div class="col-1">
-        <h3><?php if($isAllowedGuestCheckout): ?><?= $this->__('Checkout as a Guest or Register') ?><?php else: ?><?= $this->__('Register to Create an Account') ?><?php endif ?></h3>
-        <?php if($isAllowedGuestCheckout): ?>
-            <p><?= $this->__('Register with us for future convenience:') ?></p>
+        <?php if ($isRegistrationAllowed): ?>
+            <?php if ($isAllowedGuestCheckout): ?>
+                <h3><?= $this->__('Checkout as a Guest or Register') ?>
+            <?php else: ?>
+                <h3><?= $this->__('Register to Create an Account') ?></h3>
+            <?php endif ?>
+            <p><?= $this->__('By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.') ?></p>
         <?php else: ?>
-            <p><strong><?= $this->__('Register and save time!') ?></strong><br />
-            <?= $this->__('Register with us for future convenience:') ?></p>
-            <ul>
-                <li><?= $this->__('Fast and easy check out') ?></li>
-                <li><?= $this->__('Easy access to your order history and status') ?></li>
-            </ul>
+            <h3><?= $this->__('Checkout as a Guest') ?></h3>
         <?php endif ?>
-        <?php if($isAllowedGuestCheckout): ?>
+        <?php if ($isAllowedGuestCheckout): ?>
             <ul class="form-list">
-                <?php if($isAllowedGuestCheckout): ?>
                 <li class="control">
                     <input type="radio" name="checkout_method" id="login:guest" value="guest"<?php if($this->getQuote()->getCheckoutMethod() == Mage_Checkout_Model_Type_Onepage::METHOD_GUEST): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:guest"><?= $this->__('Checkout as Guest') ?></label>
                 </li>
-                <?php endif ?>
+                <?php if ($isRegistrationAllowed): ?>
                 <li class="control">
-                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod() == Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER || !$isAllowedGuestCheckout): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:register"><?= $this->__('Register') ?></label>
+                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod() == Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER): ?> checked="checked"<?php endif ?> class="radio" />
+                    <label for="login:register"><?= $this->__('Register and Checkout') ?></label>
                 </li>
-            </ul>
-            <h4><?= $this->__('Register and save time!') ?></h4>
-            <p><?= $this->__('Register with us for future convenience:') ?></p>
-            <ul class="ul">
-                <li><?= $this->__('Fast and easy check out') ?></li>
-                <li><?= $this->__('Easy access to your order history and status') ?></li>
+                <?php endif ?>
             </ul>
         <?php else: ?>
             <input type="hidden" name="checkout_method" id="login:register" value="register" checked="checked" />
         <?php endif ?>
-    </div>
-    <div class="col-2">
-        <h3><?= $this->__('Login') ?></h3>
-        <?= $this->getMessagesBlock()->toHtml() ?>
-        <form id="login-form" action="<?= $this->getPostAction() ?>" method="post">
-        <fieldset>
-            <?= $this->getBlockHtml('formkey') ?>
-            <h4><?= $this->__('Already registered?') ?></h4>
-            <p><?= $this->__('Please log in below:') ?></p>
-            <ul class="form-list">
-                <li>
-                    <label for="login-email" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
-                    <div class="input-box">
-                        <input type="text" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
-                    </div>
-                </li>
-                <li>
-                    <label for="login-password" class="required"><em>*</em><?= $this->__('Password') ?></label>
-                    <div class="input-box">
-                        <input type="password" class="input-text required-entry" id="login-password" name="login[password]" autocomplete="off" />
-                    </div>
-                </li>
-                <?= $this->getChildHtml('form.additional.info') ?>
-                <?= $this->getChildHtml('persistent.remember.me') ?>
-            </ul>
-            <input name="context" type="hidden" value="checkout" />
-        </fieldset>
-        </form>
-    </div>
-</div>
-<div class="col2-set">
-    <div class="col-1">
         <div class="buttons-set">
             <p class="required">&nbsp;</p>
             <?php if ($isAllowedGuestCheckout): ?>
@@ -102,9 +65,36 @@
         </div>
     </div>
     <div class="col-2">
+        <h3><?= $this->__('Login') ?></h3>
+        <?= $this->getMessagesBlock()->toHtml() ?>
+        <form id="login-form" action="<?= $this->getPostAction() ?>" method="post">
+        <fieldset>
+            <?= $this->getBlockHtml('formkey') ?>
+            <h4><?= $this->__('Already registered?') ?></h4>
+            <p><?= $this->__('Please log in below:') ?></p>
+            <ul class="form-list">
+                <li>
+                    <label for="login-email" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
+                    <div class="input-box">
+                        <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
+                    </div>
+                </li>
+                <li>
+                    <label for="login-password" class="required"><em>*</em><?= $this->__('Password') ?></label>
+                    <div class="input-box">
+                        <input type="password" class="input-text required-entry" id="login-password" name="login[password]" autocomplete="off" />
+                    </div>
+                </li>
+                <li>
+                    <a href="<?= $this->getUrl('customer/account/forgotpassword') ?>" class="f-left"><?= $this->__('Forgot your password?') ?></a>
+                </li>
+                <?= $this->getChildHtml('form.additional.info') ?>
+                <?= $this->getChildHtml('persistent.remember.me') ?>
+            </ul>
+            <input name="context" type="hidden" value="checkout" />
+        </fieldset>
+        </form>
         <div class="buttons-set">
-            <p class="required"><?= $this->__('* Required Fields') ?></p>
-            <a href="<?= $this->getUrl('customer/account/forgotpassword') ?>" class="f-left"><?= $this->__('Forgot your password?') ?></a>
             <button type="submit" class="button" onclick="onepageLogin(this)"><?= $this->__('Login') ?></button>
         </div>
     </div>
