--- a/app/design/frontend/base/default/template/customer/form/login.phtml
+++ b/app/design/frontend/base/default/template/customer/form/login.phtml
@@ -17,9 +17,14 @@
  * @var $this Mage_Customer_Block_Form_Login
  */
 ?>
-<div class="account-login">
+<?php $isRegistrationAllowed = $this->helper('customer')->isRegistrationAllowed() ?>
+<div class="account-login<?php if (!$isRegistrationAllowed) echo ' login-only' ?>">
     <div class="page-title">
+    <?php if ($isRegistrationAllowed): ?>
         <h1><?= $this->__('Login or Create an Account') ?></h1>
+    <?php else: ?>
+        <h1><?= $this->__('Login') ?></h1>
+    <?php endif ?>
     </div>
     <?= $this->getMessagesBlock()->toHtml() ?>
     <?php /* Extensions placeholder */ ?>
@@ -27,48 +32,46 @@
     <form action="<?= $this->getPostActionUrl() ?>" method="post" id="login-form">
         <?= $this->getBlockHtml('formkey') ?>
         <div class="col2-set">
+            <?php if ($isRegistrationAllowed): ?>
             <div class="col-1 new-users">
                 <div class="content">
                     <h2><?= $this->__('New Customers') ?></h2>
                     <p><?= $this->__('By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.') ?></p>
                 </div>
+                <div class="buttons-set">
+                    <a title="<?= $this->quoteEscape($this->__('Create an Account')) ?>" class="button" href="<?= $this->getCreateAccountUrlContext() ?>"><?= $this->__('Create an Account') ?></a>
+                </div>
             </div>
-            <div class="col-2 registered-users">
-                <div class="content">
+            <?php endif ?>
+            <?php // This column should be col-1 if the registration column is not displayed ?>
+            <div class="<?php if ($isRegistrationAllowed): ?>col-2<?php else: ?>col-1<?php endif ?> registered-users">
+                <div class="content fieldset">
                     <h2><?= $this->__('Registered Customers') ?></h2>
-                    <p><?= $this->__('If you have an account with us, please log in.') ?></p>
+                    <p class="form-instructions"><?= $this->__('If you have an account with us, please log in.') ?></p>
+                    <p class="required"><?= $this->__('* Required Fields') ?></p>
                     <ul class="form-list">
                         <li>
                             <label for="email" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
                             <div class="input-box">
-                                <input type="text" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?= Mage::helper('core')->quoteEscape($this->__('Email Address')) ?>" />
+                                <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?= $this->quoteEscape($this->__('Email Address')) ?>" />
                             </div>
                         </li>
                         <li>
                             <?php $minPasswordLength = $this->getMinPasswordLength(); ?>
                             <label for="pass" class="required"><em>*</em><?= $this->__('Password') ?></label>
                             <div class="input-box">
-                                <input type="password" name="login[password]" class="input-text required-entry validate-password min-pass-length-<?= $minPasswordLength ?>" id="pass" title="<?= Mage::helper('core')->quoteEscape($this->__('Password')) ?>" autocomplete="off" />
+                                <input type="password" name="login[password]" class="input-text required-entry validate-password min-pass-length-<?= $minPasswordLength ?>" id="pass" title="<?= $this->quoteEscape($this->__('Password')) ?>" autocomplete="off" />
                             </div>
                         </li>
                         <?= $this->getChildHtml('form.additional.info') ?>
+                        <li>
+                            <a href="<?= $this->getForgotPasswordUrl() ?>" class="f-left"><?= $this->__('Forgot Your Password?') ?></a>
+                        </li>
                         <?= $this->getChildHtml('persistent.remember.me') ?>
                     </ul>
-                    <?= $this->getChildHtml('persistent.remember.me.tooltip') ?>
-                    <p class="required"><?= $this->__('* Required Fields') ?></p>
                 </div>
-            </div>
-        </div>
-        <div class="col2-set">
-            <div class="col-1 new-users">
                 <div class="buttons-set">
-                    <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Create an Account')) ?>" class="button" onclick="window.location='<?= $this->getCreateAccountUrlContext() ?>';"><?= $this->__('Create an Account') ?></button>
-                </div>
-            </div>
-            <div class="col-2 registered-users">
-                <div class="buttons-set">
-                    <a href="<?= $this->getForgotPasswordUrl() ?>" class="f-left"><?= $this->__('Forgot Your Password?') ?></a>
-                    <button type="submit" class="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Login')) ?>" name="send" id="send2"><?= $this->__('Login') ?></button>
+                    <button type="submit" class="button" title="<?= $this->quoteEscape($this->__('Login')) ?>" name="send" id="send2"><?= $this->__('Login') ?></button>
                 </div>
             </div>
         </div>
