--- a/app/design/frontend/base/default/template/persistent/remember_me.phtml
+++ b/app/design/frontend/base/default/template/persistent/remember_me.phtml
@@ -17,7 +17,7 @@
  * @var $this Mage_Persistent_Block_Form_Remember
  */
 ?>
-<li id="remember-me-box" class="control">
+<li class="control remember-me-box">
     <?php $rememberMeId = 'remember_me' . Mage::helper('core')->getRandomString(10); ?>
     <div class="input-box">
         <input type="checkbox" name="persistent_remember_me" class="checkbox" id="<?= $rememberMeId ?>"<?php if ($this->isRememberMeChecked()): ?> checked="checked"<?php endif ?> title="<?= $this->quoteEscape($this->__('Remember Me')) ?>" />
